# scholastic-paper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yaml
src/: __init__.py  assert_enhancer.py  ast_checks.py  ast_vs_cst.py  example1.py  example2.py  example3.py  example4.py  example_for_linting.py  linting_demonstration.py  utils.py
